# cexa-kokkos-tutorials

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
.github/workflow/: courses.yml
.github/workflows/: courses.yml  exercises.yml  projects.yml  spelling.yml
cmake/: SetUpKokkos.cmake
cmake/modules/: FindKokkos.cmake
courses/: Makefile  beamerinnerthemecexa-kokkos.sty  beamerthemecexa-kokkos.sty
courses/01_beginners/: Makefile  README.md  beamercolorthemecexa-kokkos.sty  beamerinnerthemecexa-kokkos.sty  beamerouterthemecexa-kokkos.sty  beamerthemecexa-kokkos.sty  compile.sh  main.tex  test.tex
courses/02_advanced/: main.tex
courses/02_intermediate/: .latexmkrc  Makefile  README.md  main.tex
exercises/: CMakeLists.txt  README.md
exercises/00_compiling_kokkos/: README.md
exercises/01_compiling_kokkos/: README.md
exercises/01_first_program/: CMakeLists.txt  README.md
exercises/01_first_program/exercise/: CMakeLists.txt  README.md  main.cpp
exercises/01_first_program/solution/: CMakeLists.txt  main.cpp
exercises/02_basic_view/: CMakeLists.txt  README.md
exercises/02_basic_view/exercise/: CMakeLists.txt  README.md  main.cpp
exercises/02_basic_view/solution/: CMakeLists.txt  execute.sh  main.cpp
exercises/02_first_program/: README.md  main.cpp
exercises/02_first_program/solution/: execute.sh  main.cpp
exercises/03_basic_view/: README.md  main.cpp
exercises/03_basic_view/solution/: CMakeLists.txt  main.cpp
exercises/03_deep_copy/: CMakeLists.txt  README.md
exercises/03_deep_copy/exercise/: CMakeLists.txt  README.md  main.cpp
exercises/03_deep_copy/solution/: CMakeLists.txt  main.cpp
exercises/04_deep_copy/: README.md  main.cpp
exercises/04_deep_copy/solution/: main.cpp
exercises/04_parallel_loop/: CMakeLists.txt  README.md
exercises/04_parallel_loop/exercise/: CMakeLists.txt  README.md  main.cpp
exercises/04_parallel_loop/solution/: CMakeLists.txt  main.cpp
exercises/05_parallel_loop/: README.md  main.cpp
exercises/05_parallel_loop/solution/: main.cpp
exercises/05_parallel_reduce/: CMakeLists.txt  README.md
exercises/05_parallel_reduce/exercise/: CMakeLists.txt  README.md  main.cpp
exercises/05_parallel_reduce/solution/: CMakeLists.txt  main.cpp
exercises/06_parallel_reduce/: README.md  main.cpp
exercises/06_parallel_reduce/solution/: CMakeLists.txt  main.cpp
exercises/10_profiling/: CMakeLists.txt  README.md
exercises/10_profiling/common/: arguments.cpp  arguments.hpp  display.cpp  display.hpp
exercises/10_profiling/exercise/: CMakeLists.txt  main.cpp
exercises/10_profiling/solution/: CMakeLists.txt  main.cpp
exercises/11_atomics/: CMakeLists.txt  README.md
exercises/11_atomics/exercise/: CMakeLists.txt  main.cpp
exercises/11_atomics/solution/: CMakeLists.txt  main.cpp
exercises/cmake/modules/: FindKokkos.cmake
projects/: CMakeLists.txt
projects/01_wave/: CMakeLists.txt  README.md
projects/01_wave/exercise/: CMakeLists.txt  main.cpp
projects/01_wave/openmp/: CMakeLists.txt  main.cpp
projects/01_wave/python/: animate.py  animate_3d.py  plot.py  plot_3d.py
projects/01_wave/sequential/: CMakeLists.txt  main.cpp
projects/01_wave/solution/: CMakeLists.txt  main.cpp
projects/wave/omp/: CMakeLists.txt
projects/wave/sequential/: CMakeLists.txt  main.cpp
projects/wave/solution/: CMakeLists.txt
